# libsimdpp

./: .appveyor.yml  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.md  Makefile.am  README  README.md  appveyor.yml  common.mk  configure.ac  libsimdpp.config  libsimdpp.files  libsimdpp.pc.in  make_dist.sh
bench/insn/: CMakeLists.txt  load_store.cc  main.cc  main.h
doc/: CMakeLists.txt  Makefile  Makefile.am  doc-install.pl  doc-postprocess.pl  doc-reference.am  doxygen.css  expressions.txt  footer.html  header.html  preprocess.py  preprocess.xsl  tagfile-to-devhelp2.xsl  wiki.LICENSE
doc/reference/: Doxyfile.in
doc/src/: design-internal.md  dispatch.md  expressions.md  insn-counts.md  instruction-set.md  main-page.md  overview-functions.md  overview.md  tutorial.md
doc/wiki/: Main_Page.mwiki  arch#dispatch.mwiki  arch#selection.mwiki  bitwise#bit_and.mwiki  bitwise#bit_andnot.mwiki  bitwise.mwiki  cap.mwiki  concept#overview.mwiki  conv.mwiki  depr.mwiki  fp#ceil.mwiki  fp#cmp_eq.mwiki  fp#cmp_ge.mwiki  fp#cmp_gt.mwiki  fp#cmp_neq.mwiki  fp#fmsub.mwiki  fp#isnan2.mwiki  fp#max.mwiki  fp#min.mwiki  fp#neg.mwiki  fp#rcp_e.mwiki  fp#reduce_mul.mwiki  fp#round.mwiki  fp#rsqrt_rh.mwiki  fp#trunc.mwiki  fp.mwiki  int#abs.mwiki  int#add.mwiki  int#cmp_neq.mwiki  int#max.mwiki  int#min.mwiki  int#mul_lo.mwiki  int#mull.mwiki  int#neg.mwiki  int#reduce_and.mwiki  int#reduce_max.mwiki  int#reduce_min.mwiki  int#shift_l.mwiki  int#shift_r.mwiki  int#sub_sat.mwiki  (+25 more)
perf/: CMakeLists.txt  Makefile.am  README  neon.cc  neon_flt_sp.cc  neon_vfp_dp.cc  neon_vfp_sp.cc  null.cc  perf.h  sse2.cc  sse3.cc  sse4_1.cc  ssse3.cc
simdpp/: CMakeLists.txt  Makefile.am  README  arch.h  avx.h  avx2.h  capabilities.h  cast.h  deprecations.h  dispatcher.h  dispatcher_macros.h  expr.h  expr.inl  filelist.am  neon.h  neon_flt_sp.h  neon_vfp_dp.h  neon_vfp_sp.h  null.h  setup_arch.h  simd.h  sse2.h  sse3.h  sse4_1.h  ssse3.h  this_compile_arch.h  types.h
simdpp/adv/: transpose.h
simdpp/algorithm/: all_of.h  any_of.h  bitonic_sort.h  copy.h  copy_n.h  count.h  count_if.h  equal.h  fill.h  find.h  find_if.h  find_if_not.h  helper_input_range.h  lexicographical_compare.h  max.h  max_element.h  min.h  min_element.h  none_of.h  reduce.h  replace.h  replace_if.h  transform.h  transform_reduce.h
simdpp/altivec/: load1.h
simdpp/core/: align.h  aligned_allocator.h  bit_and.h  bit_andnot.h  bit_not.h  bit_or.h  bit_select.h  bit_xor.h  bitselect.h  blend.h  broadcast.h  broadcast_w.h  cache.h  cast.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  combine.h  extract.h  extract_bits.h  f_abs.h  f_add.h  f_ceil.h  f_clamp.h  f_copysign.h  f_div.h  f_floor.h  f_fmadd.h  f_fmsub.h  f_isfinite.h  f_isnan.h  f_isnan2.h  f_max.h  f_min.h  f_mul.h  f_neg.h  f_rcp_e.h  (+87 more)
simdpp/detail/: align.h  align_v128.h  array.h  cast.h  cast.inl  cast_bitwise.h  cast_expr.h  construct_eval.h  cxx11_emul.h  dispatcher.h  eval_scalar.h  extract128.h  for_each.h  get_expr.h  get_expr_blend.h  include_stdint.h  insn_id.h  mem_block.h  not_implemented.h  preprocess_single_arch.h  preprocessor.h  to_mask.h  to_mask.inl  traits.h  vector_array_macros.h  width.h  word_size.h  workarounds.h
simdpp/dispatch/: arch.h  collect_macros_generated.h  dispatcher.h  get_arch_gcc_builtin_cpu_supports.h  get_arch_linux_cpuinfo.h  get_arch_raw_cpuid.h  get_arch_string_list.h  macros.h  macros_generated.h  make_dispatcher.h  preprocess_single_compile_arch.h
simdpp/functions/: align.h  bit_and.h  bit_andnot.h  bit_not.h  bit_or.h  bit_xor.h  blend.h  broadcast.h  broadcast_w.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  f_abs.h  f_add.h  f_ceil.h  f_div.h  f_floor.h  f_fmadd.h  f_fmsub.h  f_isnan.h  f_isnan2.h  f_max.h  f_min.h  f_mul.h  f_neg.h  f_rcp_e.h  f_rcp_rh.h  f_rsqrt_e.h  f_rsqrt_rh.h  f_sign.h  f_sqrt.h  f_sub.h  f_trunc.h  i_abs.h  i_add.h  i_adds.h  i_avg.h  (+43 more)
simdpp/math/: log2_approx.h
simdpp/neon/: insert.h  math_int.h  memory_store.h  shuffle.h
simdpp/null/: bitwise.h  compare.h  foreach.h  mask.h  math.h  memory.h  set.h  shuffle.h  traits.h  transpose.h
simdpp/operators/: bit_and.h  bit_not.h  bit_or.h  bit_xor.h  cmp_eq.h  cmp_ge.h  cmp_gt.h  cmp_le.h  cmp_lt.h  cmp_neq.h  f_add.h  f_div.h  f_mul.h  f_sub.h  i_add.h  i_mul.h  i_shift_l.h  i_shift_r.h  i_sub.h  operators.h
simdpp/simd/: bitwise.h  cache.h  cast.h  compare.h  convert.h  extract.h  float32x4.h  float32x4.inl  float32x8.h  float32x8.inl  float64x2.h  float64x2.inl  float64x4.h  float64x4.inl  fwd.h  insert.h  int128.h  int128.inl  int16x16.h  int16x16.inl  int16x8.h  int16x8.inl  int256.h  int256.inl  int32x4.h  int32x4.inl  int32x8.h  int32x8.inl  int64x2.h  int64x2.inl  int64x4.h  int64x4.inl  int8x16.h  int8x16.inl  int8x32.h  int8x32.inl  make_shuffle_bytes_mask.h  math_fp_adv.h  math_fp_basic.h  math_int_adv.h  (+11 more)
simdpp/sse/: cache.h  compare.h  convert.h  extract.h  extract_half.h  insert.h  math_fp.h  math_int.h  memory_load.h  memory_store.h  shuffle.h
simdpp/types/: README  any.h  empty_expr.h  float32.h  float32.inl  float32x16.h  float32x4.h  float32x4.inl  float32x8.h  float32x8.inl  float64.h  float64.inl  float64x2.h  float64x2.inl  float64x4.h  float64x4.inl  float64x8.h  fwd.h  generic.h  generic.inl  int128.h  int128.inl  int16.h  int16.inl  int16x16.h  int16x16.inl  int16x32.h  int16x8.h  int16x8.inl  int256.h  int256.inl  int32.h  int32.inl  int32x16.h  int32x4.h  int32x4.inl  int32x8.h  int32x8.inl  int64.h  int64.inl  (+15 more)
test/: CMakeLists.txt  Makefile.am  arch_registration.cc  arch_registration.h  main_dispatcher.cc  main_expr.cc  main_insn.cc  main_test1.cc  main_test_function.inl  test_case.cc  test_case.h  test_helpers.h  test_main.cc  test_results.h  test_suite.cc  tests.h  traits.h
test/algorithm/: bitonic_sort.cc
test/arch/: avx2_main.cc  avx2_shuffle.cc  avx2_shuffle_bytes.cc  avx_main.cc  avx_shuffle.cc  avx_shuffle_bytes.cc  neon_flt_sp_main.cc  neon_flt_sp_shuffle.cc  neon_flt_sp_shuffle_bytes.cc  neon_main.cc  neon_shuffle.cc  (+22 more)
(+1190 files in other folders)
